# footings-dask

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  noxfile.py  pyproject.toml
.github/workflows/: gh-pages.yaml  tests.yaml
dev/: api.html  example.html  genindex.html  license.html  search.html  searchindex.js
dev/.doctrees/: changelog.doctree  environment.pickle  example.doctree  license.doctree
dev/_modules/: index.html
dev/_modules/footings_dask/: foreach_jig.html
dev/_sources/: api.rst.txt  example.md.txt  index.md.txt
docs/: conf.py  index.md  license.md
main/: .buildinfo  changelog.html  index.html  objects.inv  py-modindex.html
main/.doctrees/: api.doctree  environment.pickle  index.doctree
main/_sources/: example.md.txt
src/footings_dask/: __init__.py  foreach_jig.py
tests/: test_foreach_jig.py
