[tool.poetry]
name = "footings-dask"
packages = [
    { include = "footings_dask", from = "src" }
]
version = "0.1.0"
description = "A parallel backend for footings using dask."
authors = ["Dustin Tindall <dustin.tindall@gmail.com>"]
license = "BSD 3-Clause License"
readme = 'README.md'
homepage = "https://github.com/footings/footings-dask"
repository = "https://github.com/footings/footings-dask"
documentation = "https://footings.github.io/footings-dask/"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = "^3.7"
footings = "^0.10"
toolz = "^0.11"
dask = ">=2021.0"
importlib-metadata = {version = "^3.0", python = "<3.8"}


[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.0"
sphinx = "^3.0"
myst-nb = "^0.12"
pydata-sphinx-theme = "^0.6.0"
flake8 = "^3.9"
black = "^21.5b"
pre-commit = "^2.13"
nox = ">=2021.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = "footings-dask"
